--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -6,8 +6,10 @@
 <div class="row py-3 px-3">
 
  <div class="rounded border col-sm-12 col-md-8 col-lg-7 mx-auto px-4 bg-white text-dark shadow">
-
+  <div class="col-12 border px-3 my-3 bg-light text-dark text-center">
     <h2>User info</h2>
+  </div>
+    
   <div class="d-flex">
     <div class="flex-shrink-0 ">
      <div class="d-flex justify-content-end">
@@ -44,7 +46,6 @@
     <!-- ユーザーの投稿一覧 -->
 <div class="row py-3 px-3">
 
-=======
 <div class="rounded border col-md-8 mx-auto p-4 bg-white text-dark shadow">
   
   <ul class="nav nav-tabs" id="myTab" role="tablist">
