--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     <header class="shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid my-5 img1">
-          <a class="navbar-brand p-3" href="/"><%= image_tag 'logo8.png', class:'logo'%></a>
+          <a class="navbar-brand p-3" href="/"><%= image_tag '/assets/logo8.png', class:'logo' %></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
