--- a/app/views/public/questions/new.html.erb
+++ b/app/views/public/questions/new.html.erb
@@ -15,11 +15,11 @@
 <%= form_with model: @question do |f| %>
   <div class="form-group">
   <label>質問文</label>
-  <%= f.text_area :question_content, class:"form-control book_body"%>
+  <%= f.text_area :question_content, class:"form-control body"%>
  </div>  
  <div class="form-group">
  <label>画像</label>
-  <%= f.file_field :image, placeholder: "画像", accept: "image/*",class:"book_body"%>
+  <%= f.file_field :image, placeholder: "画像", accept: "image/*",class:"body"%>
  </div>
  <div>
   <label>質問カテゴリー</label><br />
