[FIX] 投稿写真のサイズとログイン機能

--- a/app/views/public/questions/show.html.erb
+++ b/app/views/public/questions/show.html.erb
@@ -26,7 +26,7 @@
    </div>
    <div class="d-flex justify-content-end">
     <div>
-     <%= image_tag @question.get_image %>
+     <%= image_tag @question.get_image(500,500) %>
     </div> 
    </div> 
    <div class="d-flex justify-content-end">
@@ -71,7 +71,7 @@
    </div>
    <div class="d-flex justify-content-end">
     <div>
-     <%= image_tag answer.get_image %>
+     <%= image_tag answer.get_image(500,500) %>
     </div> 
    </div> 
    <div class="d-flex justify-content-end">
